# GNSS_Demo

./: build.gradle  settings.gradle
.github/workflows/: build.yml
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  rtklib_jni.c
src/main/java/com/example/gnssdemo/: MainActivity.java  RtkLibWrapper.java
src/main/python/: rtk_demo.py
src/main/res/layout/: activity_main.xml
src/main/res/values/: strings.xml
